# dungeon-master

./: .dungeon_master_cache.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PRD_Testing_Structure_Revision.md  README.md  dmconfig.json  pyproject.toml  setup.py  test_installation.py  test_restructure_implementation.md  verify_installation.py
.lore/: map.md
.lore/cli/: main-interface.md
.lore/commands/: cli-system.md
.lore/core/: configuration.md  engine.md
.lore/integrations/: cursor.md  git-hooks.md
.lore/utils/: utilities.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.md
.taskmaster/reports/: task-complexity-report.json
docs/: README.md  commands.md  getting-started.md
dungeon_master/: __init__.py  auth_service.md  change_detector.py  cli.py  generator.py  parser.py  updater.py  utils.py
dungeon_master/commands/: create_lore.py  init.py  map.py  review.py  validate.py
dungeon_master/core/: decorator_parser.py  git_utils.py  template.py
examples/: sample_service.py  template_example.md
hooks/: pre_commit_hook.py
lore/: change_detector.md  cli.md  document_updater.md  file_parser.md  installation_tests.md  parser_tests.md  pre_commit_hook.md  template_generator.md  utilities.md  verification_tests.md
scripts/: README.md  build_and_deploy.sh  deploy.py  quick_deploy.sh
templates/: gitignore.template  lore_template.md
tests/: test_config.py  test_cursor_setup.py  test_decorator_parser.py  test_installation.py  test_parser.py  test_template.py  verify_installation.py
(+4 files in other folders)
