[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-master"
version = "0.1.0"
description = "A lightweight pre-commit hook system designed to enforce documentation updates alongside code changes"
readme = "README.md"
authors = [
    {name = "Dungeon Master Team"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "gitpython>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["dungeon_master*"]
exclude = ["tests*", "templates*", "examples*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
dm = "dungeon_master.cli:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
